--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,25 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/makeCircle.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="button button1">add a blinky dancer</a>
+      <a href="#" class="button button2">stepper</a>
+      <a href="#" class="button button3">circle</a>
+    </div>
+    <div id = 'dancers'>
+      <div class ='dancer1'>
+        <div class="spinner">
+          <div class="orbit o4"></div>
+          <div class="orbit o3"></div>
+          <div class="orbit o2"></div>
+          <div class="orbit o1"></div>
+        </div>
+      </div>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
