--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="lib/jquery-ui/jquery-ui.js"></script>
+    <script src="lib/wad.min.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/groovyDancer.js"></script>
     <script src="src/makeCircle.js"></script>
+
+
   </head>
   <body>
     <div class="topbar">
